# conversacore

./: .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/lib/: pipecat.ts
voice-gateway/: .env.example  Dockerfile  pyproject.toml
voice-gateway/app/: main.py
voice-gateway/app/api/: health.py  metrics.py  token.py  websocket.py
voice-gateway/app/core/: auth.py  config.py  ids.py  logging.py
voice-gateway/app/infra/: metrics.py  rate_limit.py  redis_client.py
voice-gateway/app/infra/lua/: add_usage.lua  admit_session.lua  check_quota.lua  release_session.lua
voice-gateway/app/pipeline/: factory.py  tools.py  usage_aggregator.py
voice-gateway/app/sessions/: manager.py  models.py
voice-gateway/app/usage/: estimator.py  tracker.py
voice-gateway/tests/: test_token.py
